--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "@noble/hashes": "^1.8.0",
-    "@noble/secp256k1": "^2.3.0"
+    "@noble/secp256k1": "^2.3.0",
+    "js-sha3": "^0.9.3",
+    "secp256k1": "^5.0.1"
   }
 }
