--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@bitcoinerlab/secp256k1": "^1.2.0",
     "@noble/hashes": "^1.8.0",
     "@noble/secp256k1": "^2.3.0",
     "js-sha3": "^0.9.3",
-    "secp256k1": "^5.0.1"
+    "secp256k1": "^5.0.1",
+    "secp256k1-native": "^1.1.3"
   }
 }
