--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,101 @@
-node_modules
-result
+# Wallet Result Files - CRITICAL: Never commit private keys!
+result.txt
+ultra-results.txt
+vanity-results-*.txt
+*.wallet
+*.keys
+*-results-*.txt
+
+# Private Key Files (common naming patterns)
+private-keys.txt
+wallets.txt
+keys.txt
+addresses.txt
+generated-*.txt
+
+# Backup files that might contain sensitive data
+*.bak
+*.backup
+*.old
+
+# Node.js dependencies
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+package-lock.json
+yarn.lock
+
+# Runtime files
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage/
+
+# nyc test coverage
+.nyc_output
+
+# Dependency directories
+jspm_packages/
+
+# Optional npm cache directory
+.npm
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# IDE and Editor files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.DS_Store
+Thumbs.db
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Logs
+logs/
+*.log
+
+# Temporary files
+tmp/
+temp/
+.tmp/
+
+# Build outputs (if any)
+dist/
+build/
+out/
+
+# Configuration files that might contain sensitive data
+config.json
+settings.json
+local-config.*
+
+# Test files with potentially sensitive data
+test-results/
+test-wallets/
